Add new profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Karlijn Dinnissen"
-  avatar           : "profile.png"
+  avatar           : "MGP_0453.jpg"
   bio              : "PhD Candidate at Utrecht University "
   location         : "Utrecht, The Netherlands"
   employer         :
