--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/karlijn-dinnissen/"
+  linkedin         : "karlijn-dinnissen"
   orcid            : "http://orcid.org/0000-0003-2498-2881"
   pinterest        :
   soundcloud       :
