--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,10 @@ main:
     url: /teaching/    
 
   - title: "Talks"
-    url: /talks/    
+    url: /talks/   
+
+  - title: "Professional Activities"
+    url: /activities/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
